<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        tools:context=".user.view.LoginActivity">

    <android.support.v7.widget.CardView
            android:id="@+id/card_login"
            android:layout_centerInParent="true"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:layout_width="@dimen/w_card_login"
            android:layout_height="@dimen/h_card_login">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp">

                <View
                        android:layout_width="8dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:background="@color/app_color_theme_5"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/login"
                        android:textColor="@color/app_color_theme_5"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
            </RelativeLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:textColorHint="@color/color_login_hint"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/et_username"
                            android:background="@drawable/select_bg_edit_login"
                            android:hint="@string/Username"
                            android:textColor="@color/colro_edit"
                            android:inputType="textPersonName"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="18sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:textColorHint="@color/color_login_hint"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/et_password"
                            android:background="@drawable/select_bg_edit_login"
                            android:hint="@string/Password"
                            android:textColor="@color/colro_edit"
                            android:inputType="textPassword"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="18sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center">

                <Button
                        android:id="@+id/bt_go"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:background="@drawable/select_bg_btn"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:text="@string/Go"
                        android:textColor="@color/color_white"/>
            </RelativeLayout>

            <TextView
                    android:id="@+id/tv_forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/forget_your_password"
                    android:textColor="#9a9a9a"
                    android:textSize="12sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/card_login"
            android:layout_alignEnd="@id/card_login"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="-20dp"
            android:src="@drawable/plus"
            android:transitionName="loginFab"
            app:fabSize="normal" />
</RelativeLayout>