<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_register"
        tools:context="com.x_meteor.meteor.user.view.RegisterActivity">

    <FrameLayout
            android:layout_centerInParent="true"
            android:paddingTop="70dp"
            android:layout_width="320dp"
            android:layout_height="400dp">

        <android.support.v7.widget.CardView
                android:id="@+id/cv_add"
                app:cardBackgroundColor="@color/colro_edit"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                >

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_marginTop="50dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:text="@string/register"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

                <LinearLayout
                        android:layout_marginTop="10dp"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                    <android.support.design.widget.TextInputLayout
                            android:textColorHint="#f0f7f4"
                            android:layout_width="match_parent"
                            android:theme="@style/TextLabel"
                            android:layout_height="wrap_content">

                        <EditText
                                android:textSize="16sp"
                                android:hint="@string/Username"
                                android:textColor="#f0f7f4"
                                android:id="@+id/et_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"
                                android:background="@drawable/selector_bg_edit_register"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:paddingBottom="2dp"
                                />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                    <android.support.design.widget.TextInputLayout

                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <EditText
                                android:textSize="16sp"
                                android:hint="@string/Password"
                                android:textColor="#f0f7f4"
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:background="@drawable/selector_bg_edit_register"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:paddingBottom="2dp"
                                />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <!--<LinearLayout-->
                        <!--android:paddingStart="50dp"-->
                        <!--android:paddingEnd="30dp"-->
                        <!--android:orientation="horizontal"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="40dp">-->

                    <!--<android.support.design.widget.TextInputLayout-->
                            <!--android:textColorHint="#f0f7f4"-->
                            <!--android:id="@+id/tip_repaw"-->
                            <!--android:theme="@style/TextLabel"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content">-->

                        <!--<EditText-->
                                <!--android:textSize="16sp"-->
                                <!--android:textColor="#f0f7f4"-->
                                <!--android:hint="@string/repeat_password"-->
                                <!--android:id="@+id/et_repeatpassword"-->
                                <!--android:layout_width="match_parent"-->
                                <!--android:layout_height="wrap_content"-->
                                <!--android:inputType="textPassword"-->
                                <!--android:background="@drawable/selector_bg_edit_register"-->
                                <!--android:textCursorDrawable="@drawable/bg_input_cursor_2"-->
                                <!--android:paddingBottom="2dp"-->
                                <!--/>-->
                    <!--</android.support.design.widget.TextInputLayout>-->
                <!--</LinearLayout>-->

                <Button
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/btn_register"
                        android:background="@drawable/select_bg_btn"
                        android:enabled="false"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:text="@string/next"
                        android:textColor="@color/color_white"
                        >
                </Button>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="normal"
                android:src="@drawable/plus_x"
                android:transitionName="loginFab"
                android:layout_gravity="center_horizontal|top"
                app:backgroundTint="@color/colro_edit"/>
    </FrameLayout>

</RelativeLayout>
